ml - task 4 completed

--- a/machine-learning/tasks/task4/task4.ipynb
+++ b/machine-learning/tasks/task4/task4.ipynb
@@ -17,6 +17,7 @@
     "from sklearn.metrics import silhouette_score, normalized_mutual_info_score\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import adjusted_rand_score, v_measure_score, silhouette_score, davies_bouldin_score\n",
+    "from sklearn.manifold import TSNE\n",
     "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from yellowbrick.cluster import KElbowVisualizer\n",
@@ -840,7 +841,7 @@
     "else:\n",
     "    print(\"couldnt run final Mahalanobis DBSCAN: Best parameters not found or inv_cov missing.\")\n",
     "\n",
-    "print(\"Final DBSCAN fitting complete.\")\n",
+    "print(\"final DBSCAN fitting complete.\")\n",
     "print(\"-------------------------------------------------------\")\n",
     "\n",
     "\n",
@@ -852,7 +853,7 @@
     "def analyse_dbscan_labels(labels, method_name, X_data, true_labels_comp):\n",
     "    if labels is None:\n",
     "        print(f\"--- {method_name} ---\")\n",
-    "        print(\"Clustering could not be performed.\")\n",
+    "        print(\"clustering could not be performed.\")\n",
     "        print(\"-\" * 15)\n",
     "        return\n",
     "\n",
@@ -909,7 +910,174 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# function to run kmeans and eval silhouette and inertia score\n",
+    "def apply_kmeans_and_evaluate(data, name, n_clusters_range=range(2, 11)):\n",
+    "    results = []\n",
+    "    \n",
+    "    for k in n_clusters_range:\n",
+    "        # Apply KMeans\n",
+    "        kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
+    "        cluster_labels = kmeans.fit_predict(data)\n",
+    "        \n",
+    "        # Calculate silhouette score\n",
+    "        sil_score = silhouette_score(data, cluster_labels)\n",
+    "        \n",
+    "        # Calculate inertia (sum of squared distances to closest centroid)\n",
+    "        inertia = kmeans.inertia_\n",
+    "        \n",
+    "        results.append({\n",
+    "            'k': k,\n",
+    "            'silhouette': sil_score,\n",
+    "            'inertia': inertia,\n",
+    "            'labels': cluster_labels\n",
+    "        })\n",
+    "        \n",
+    "        print(f\"{name} with {k} clusters - Silhouette Score: {sil_score:.3f}, Inertia: {inertia:.2f}\")\n",
+    "    \n",
+    "    return results\n",
+    "\n",
+    "# original dataset\n",
+    "original_results = apply_kmeans_and_evaluate(X_std, \"Original Dataset\")\n",
+    "\n",
+    "# pca dataset\n",
+    "pca_results = apply_kmeans_and_evaluate(X_pca, \"PCA Dataset\")\n",
+    "\n",
+    "# Plot results\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot([r['k'] for r in original_results], [r['silhouette'] for r in original_results], 'o-', label='Original Dataset')\n",
+    "plt.plot([r['k'] for r in pca_results], [r['silhouette'] for r in pca_results], 'o-', label='PCA Dataset')\n",
+    "plt.xlabel('Number of Clusters (k)')\n",
+    "plt.ylabel('Silhouette Score')\n",
+    "plt.title('Silhouette Score vs. Number of Clusters')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "\n",
+    "# find the best on silhouette score\n",
+    "best_k_original = max(original_results, key=lambda x: x['silhouette'])\n",
+    "best_k_pca = max(pca_results, key=lambda x: x['silhouette'])\n",
+    "\n",
+    "print(\"\\nBest results:\")\n",
+    "print(f\"Original Dataset: k={best_k_original['k']}, Silhouette Score={best_k_original['silhouette']:.3f}\")\n",
+    "print(f\"PCA Dataset: k={best_k_pca['k']}, Silhouette Score={best_k_pca['silhouette']:.3f}\")\n",
+    "\n",
+    "# determine which is better\n",
+    "if best_k_pca['silhouette'] > best_k_original['silhouette']:\n",
+    "    print(\"\\nPCA dataset is better.\")\n",
+    "else:\n",
+    "    print(\"\\nOriginal dataset is better.\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The original dataset's best silhouette score is 0.441. The PCA dataset's best silhoutte score is 0.442. Therefore the PCA dataset results in a better separated and more compact clusters, however the difference between the results is very minor. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 8 - Clustering Using t-SNE\n",
+    "\n",
+    "1. Apply t-SNE (using the exact method) to reduce the dataset to 4 components.\n",
+    "2. Create a 3D scatter plot of the first three t-SNE components.\n",
+    "3. Apply KMeans clustering on the t‐SNE–reduced data using an appropriate number of\n",
+    "clusters (e.g., based on prior optimal k or an elbow method on the t‐SNE output).\n",
+    "4. Evaluate the clustering performance on the t‐SNE–reduced data using metrics such\n",
+    "as the Silhouette Score and compare these results to clustering on the original and\n",
+    "PCA–transformed dataset.\n",
+    "5. Discuss whether the clusters formed on the t-SNE–reduced data are more distinct\n",
+    "and how well they correspond to the known data structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# compute t-SNE \n",
+    "tsne = TSNE(n_components=4, method='exact', random_state=42)\n",
+    "X_tsne = tsne.fit_transform(X_std)\n",
+    "\n",
+    "# 3D scatter plot of the first three components\n",
+    "fig = plt.figure(figsize=(12, 10))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "if 'label' in df.columns:\n",
+    "    labels = df['label'].unique()\n",
+    "    for i, label in enumerate(labels):\n",
+    "        indices = df['label'] == label\n",
+    "        ax.scatter(X_tsne[indices, 0], X_tsne[indices, 1], X_tsne[indices, 2], \n",
+    "                   label=label, alpha=0.7)\n",
+    "else:\n",
+    "    ax.scatter(X_tsne[:, 0], X_tsne[:, 1], X_tsne[:, 2], alpha=0.7)\n",
+    "\n",
+    "ax.set_title('3D t-SNE Visualisation')\n",
+    "ax.set_xlabel('t-SNE Component 1')\n",
+    "ax.set_ylabel('t-SNE Component 2')\n",
+    "ax.set_zlabel('t-SNE Component 3')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Apply KMeans clustering on the t-SNE-reduced data\n",
+    "# First, determine the optimal number of clusters using the elbow method\n",
+    "distortions = []\n",
+    "silhouette_scores = []\n",
+    "K_range = range(2, 11)\n",
+    "\n",
+    "for k in K_range:\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
+    "    kmeans.fit(X_tsne)\n",
+    "    distortions.append(kmeans.inertia_)\n",
+    "    \n",
+    "    labels = kmeans.labels_\n",
+    "    silhouette_avg = silhouette_score(X_tsne, labels)\n",
+    "    silhouette_scores.append(silhouette_avg)\n",
+    "\n",
+    "\n",
+    "# calc silhouette scores\n",
+    "tsne_results = []\n",
+    "for k in K_range:\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
+    "    labels = kmeans.fit_predict(X_tsne)\n",
+    "    silhouette_avg = silhouette_score(X_tsne, labels)\n",
+    "    tsne_results.append({'k': k, 'silhouette': silhouette_avg})\n",
+    "\n",
+    "best_k_tsne = max(tsne_results, key=lambda x: x['silhouette'])\n",
+    "\n",
+    "\n",
+    "print(\"\\nResults:\")\n",
+    "print(f\"Original Dataset: k={best_k_original['k']}, Silhouette Score={best_k_original['silhouette']:.3f}\")\n",
+    "print(f\"PCA Dataset: k={best_k_pca['k']}, Silhouette Score={best_k_pca['silhouette']:.3f}\")\n",
+    "print(f\"t-SNE Dataset: k={best_k_tsne['k']}, Silhouette Score={best_k_tsne['silhouette']:.3f}\")\n",
+    "\n",
+    "# find the best\n",
+    "best_method = max([\n",
+    "    ('Original', best_k_original['silhouette']),\n",
+    "    ('PCA', best_k_pca['silhouette']),\n",
+    "    ('t-SNE', best_k_tsne['silhouette'])\n",
+    "], key=lambda x: x[1])\n",
+    "\n",
+    "print(f\"\\nThe {best_method[0]} dataset provides better clustering quality with a silhouette score of {best_method[1]:.3f}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The t-SNE dataset has the lowest silhouette score, therefore it has the least well defined cluster. t-SNE (t-Distributed Stochastic Neighbour Embedding). Even though t-SNE is a dimensionality reduction technique which theoretically could improve cluster cohesion, the original dataset has only 8 features and therefore may not possess enough dimensions to benefit from this technique."
+   ]
   },
   {
    "cell_type": "markdown",
