ml: task6.1 complete

--- a/machine-learning/tasks/task6.1/task6.1.ipynb
+++ b/machine-learning/tasks/task6.1/task6.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
    "source": [
     "## Item 5 Commentary\n",
     "\n",
-    "The addition of regularisation did not improve performance as the MSE and R^2 were almost identical. Regularisation is often used to address multicolinearity which had already been addressed by principal component analysis as the components created are not correlated. In general regularisation may still be useful after PCA if a large number of components are retained as overfitting may still occur. Components with small eignvalues (variance) may also cause numerical instability so regularisation would help to address this."
+    "The addition of regularisation did not improve performance as the MSE and R^2 were almost identical. Regularisation is often used to address multicollinearity which had already been addressed by principal component analysis as the components created are not correlated. In general regularisation may still be useful after PCA if a large number of components are retained as overfitting may still occur. Components with small eigenvalues (variance) may also cause numerical instability so regularisation would help to address this."
    ]
   }
  ],
