ml: task 11 completed

--- a/machine-learning/tasks/task11/task11.ipynb
+++ b/machine-learning/tasks/task11/task11.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,8 +486,28 @@
     "\n",
     " Default values were used for the models as there was no information on the parameters used by the authors.\n",
     "\n",
-    " Random seed of 42 is used to ensure reproducibility.\n",
-    "\n"
+    " Random seed of 42 is used to ensure reproducibility."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {\n",
+    "    'XGB': XGBClassifier(random_state=42, tree_method='hist'),\n",
+    "    'RF': RandomForestClassifier(random_state=42),\n",
+    "    'DT': DecisionTreeClassifier(random_state=42),\n",
+    "    'KNN': KNeighborsClassifier()\n",
+    "}\n",
+    "\n",
+    "baseline_results = {}\n",
+    "for name, model in models.items():\n",
+    "    trained_model, results = train_and_evaluate_model(\n",
+    "        model, X_train, X_test, y_train, y_test, name\n",
+    "    )\n",
+    "    baseline_results[name] = results\n"
    ]
   },
   {
@@ -529,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
